--- a/namespace/infra-tools/apps/mlflow.yaml
+++ b/namespace/infra-tools/apps/mlflow.yaml
@@ -31,7 +31,7 @@ spec:
       database: mlflowdb
 
  destination:
-  namespace: application
+  namespace: infra-tools
   server: https://kubernetes.default.svc
 
  syncPolicy:
