--- a/namespace/infra-tools/apps/mlflow.yaml
+++ b/namespace/infra-tools/apps/mlflow.yaml
@@ -34,7 +34,7 @@ spec:
   namespace: infra-tools
   server: https://kubernetes.default.svc
 
- # syncPolicy:
+ syncPolicy: {}
  #  automated:
  #   prune: true
  #   selfHeal: true
