--- a/namespace/infra-tools/mf/minio.yaml
+++ b/namespace/infra-tools/mf/minio.yaml
@@ -2,10 +2,10 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: minio
-  namespace: infra-tools 
+  namespace: mlflow
 spec:
   destination:
-    namespace: application
+    namespace: mlflow
     server: https://kubernetes.default.svc
   project: default
   source:
