--- a/namespace/mlflow/minio.yaml
+++ b/namespace/mlflow/minio.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: minio
-  namespace: mlflow
+  namespace: infra-tools
 spec:
   destination:
     namespace: mlflow
