--- a/namespace/mlflow/minio.yaml
+++ b/namespace/mlflow/minio.yaml
@@ -14,6 +14,10 @@ spec:
     targetRevision: 17.0.21
     helm:
       valuesObject:
+        image:
+          registry: docker.io
+          repository: bitnamilegacy/minio
+          tag: 2024.3.5-debian-12-r0
         auth:
           rootUser: minio
           rootPassword: minio123
