--- a/namespace/mlflow/minio.yaml
+++ b/namespace/mlflow/minio.yaml
@@ -16,8 +16,8 @@ spec:
       valuesObject:
         image:
           registry: docker.io
-          repository: bitnamilegacy/minio
-          tag: 2024.3.5-debian-12-r0
+          repository: minio/minio
+          tag: latest
         auth:
           rootUser: minio
           rootPassword: minio123
