--- a/namespace/mlflow/mlflow-postgres.yaml
+++ b/namespace/mlflow/mlflow-postgres.yaml
@@ -14,10 +14,22 @@ spec:
     targetRevision: 12.5.6
     helm:
       valuesObject:
+        service:
+          type: ClusterIP
+          port: 5000
         auth:
-          username: mlflow
-          password: mlflowpass
-          database: mlflow
+          enabled: false
+
+        postgresql:
+          image:
+            registry: docker.io
+            repository: bitnamilegacy/postgresql
+            tag: 15.6.0-debian-11-r25
+          auth:
+            postgresPassword: mlflowpass
+            username: mlflow
+            password: mlflowpass
+            database: mlflow
         primary:
           persistence:
             enabled: false
