--- a/namespace/mlflow/minio.yaml
+++ b/namespace/mlflow/minio.yaml
@@ -1,34 +1,34 @@
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: minio
-  namespace: infra-tools
-spec:
-  destination:
-    namespace: mlflow
-    server: https://kubernetes.default.svc
-  project: default
-  source:
-    repoURL: https://charts.bitnami.com/bitnami
-    chart: minio
-    targetRevision: 17.0.21
-    helm:
-      valuesObject:
-        auth:
-          rootUser: minio
-          rootPassword: minio123
-        defaultBuckets: "mlflow-artifacts"
-        service:
-          type: ClusterIP
-        persistence:
-          enabled: false
-        console:
-          enabled: false
-  syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
-    syncOptions:
-      - CreateNamespace=true
-      - ServerSideApply=true
-      - SkipDryRunOnMissingResource=true
+# apiVersion: argoproj.io/v1alpha1
+# kind: Application
+# metadata:
+#   name: minio
+#   namespace: infra-tools
+# spec:
+#   destination:
+#     namespace: mlflow
+#     server: https://kubernetes.default.svc
+#   project: default
+#   source:
+#     repoURL: https://charts.bitnami.com/bitnami
+#     chart: minio
+#     targetRevision: 17.0.21
+#     helm:
+#       valuesObject:
+#         auth:
+#           rootUser: minio
+#           rootPassword: minio123
+#         defaultBuckets: "mlflow-artifacts"
+#         service:
+#           type: ClusterIP
+#         persistence:
+#           enabled: false
+#         console:
+#           enabled: false
+#   syncPolicy:
+#     automated:
+#       prune: true
+#       selfHeal: true
+#     syncOptions:
+#       - CreateNamespace=true
+#       - ServerSideApply=true
+#       - SkipDryRunOnMissingResource=true
