--- a/namespace/mlflow/mlflow-minio.yaml
+++ b/namespace/mlflow/mlflow-minio.yaml
@@ -22,8 +22,8 @@ spec:
           type: ClusterIP
         persistence:
           enabled: false
-        console:
-          enabled: false
+        # console:
+        #   enabled: false
   syncPolicy:
     automated:
       prune: true
