--- a/namespace/mlflow/mlflow-postgres.yaml
+++ b/namespace/mlflow/mlflow-postgres.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: infra-tools
 spec:
   destination:
-    namespace: application
+    namespace: mlflow
     server: https://kubernetes.default.svc
   project: default
   source:
