--- a/application/inference-api.yaml
+++ b/application/inference-api.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: git@github.com:<your-org>/mlflow-inference-api.git
+    repoURL: git@github.com:MaxymLy/mlflow-inference-api.git
     targetRevision: main
     path: helm
   destination:
