--- a/namespace/application/inference-api.yaml
+++ b/namespace/application/inference-api.yaml
@@ -10,7 +10,7 @@ spec:
     targetRevision: main
     path: helm
   destination:
-    server: <https://kubernetes.default.svc>
+    server: https://kubernetes.default.svc
     namespace: application
   syncPolicy:
     automated:
